# liquidmon

./: .gitignore  Cargo.toml  README.md  justfile
.claude/: settings.json
.githooks/: install.sh  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
doc/loom/knowledge/: architecture.md  concerns.md  conventions.md  entry-points.md  mistakes.md  patterns.md  stack.md
doc/plans/: PLAN-codebase-cleanup.md  PLAN-device-selector.md  PLAN-sparkline-beautify.md
i18n/en/: cosmic_liquid.ftl
resources/: app.desktop  app.metainfo.xml
scripts/: install-liquidctl-udev.sh
src/: app.rs  config.rs  devices.rs  liquidctl.rs  main.rs  sparkline.rs
