[package]
name = "liquidmon"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "COSMIC panel applet for Corsair AIO temps and fan/pump duties via liquidctl"
repository = "https://github.com/cosmix/liquidmon"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["process", "time"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "564ef834cec33a948dc10c9b401cf29db5d18373"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]
