[package]
name = "liquidmon"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "COSMIC panel applet for Corsair AIO temps and fan/pump duties via liquidctl"
repository = "https://github.com/cosmix/liquidmon"
authors = ["Dimosthenis Kaponis <dkaponis@gmail.com>"]

[package.metadata.deb]
maintainer = "Dimosthenis Kaponis <dkaponis@gmail.com>"
section = "utility"
priority = "optional"
depends = "$auto, liquidctl"
extended-description = """\
LiquidMon is a COSMIC panel applet that surfaces Corsair AIO liquid \
cooler temperatures and pump/fan duty controls. It shells out to \
liquidctl for device access, so liquidctl must be installed and \
configured with appropriate udev rules."""
assets = [
    ["target/release/liquidmon", "usr/bin/", "755"],
    ["resources/app.desktop", "usr/share/applications/com.github.cosmix.LiquidMon.desktop", "644"],
    ["resources/app.metainfo.xml", "usr/share/appdata/com.github.cosmix.LiquidMon.metainfo.xml", "644"],
    ["resources/icon.svg", "usr/share/icons/hicolor/scalable/apps/com.github.cosmix.LiquidMon.svg", "644"],
    ["README.md", "usr/share/doc/liquidmon/README", "644"],
]

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["process", "time"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "564ef834cec33a948dc10c9b401cf29db5d18373"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]
